crates/plotnik-tests/tests/03-analyze/fields/single_element_sequence_rejected.txt
Q = (foo
  bar: {(a)}
)
------------------ DIAGNOSTICS -------------------
error: grammar field `bar` cannot match a sequence
 --> query.ptk:2:8
  |
2 |   bar: {(a)}
  |        ^^^^^
  |
help: a grammar field holds one child node. Match one pattern, or move the sequence outside the grammar-field constraint
------------------ DEFINITIONS -------------------
Q
